Large object, tests are failing

--- a/cask/src/main/resources/application.yml
+++ b/cask/src/main/resources/application.yml
@@ -5,6 +5,7 @@ spring.datasource:
    url: "jdbc:postgresql://localhost:5432/vynedb"
    username: "vynedb"
    password: "vynedb"
+   driver: "org.postgresql.Driver"
 
 spring:
    main:
