--- a/vyne-core-types/pom.xml
+++ b/vyne-core-types/pom.xml
@@ -48,6 +48,11 @@
       </dependency>
 
       <dependency>
+         <groupId>com.jayway.jsonpath</groupId>
+         <artifactId>json-path</artifactId>
+         <version>2.4.0</version>
+      </dependency>
+      <dependency>
          <groupId>lang.taxi</groupId>
          <artifactId>core-types</artifactId>
       </dependency>
