--- a/vyne/pom.xml
+++ b/vyne/pom.xml
@@ -44,6 +44,10 @@
          <version>${project.version}</version>
       </dependency>
       <dependency>
+         <groupId></groupId>
+         <artifactId>taxi-sch</artifactId>
+      </dependency>
+      <dependency>
          <groupId>org.skyscreamer</groupId>
          <artifactId>jsonassert</artifactId>
          <version>1.5.0</version>
@@ -77,6 +81,12 @@
                <artifactId>guava</artifactId>
             </exclusion>
          </exclusions>
+      </dependency>
+      <dependency>
+         <groupId>lang.taxi</groupId>
+         <artifactId>taxi-writer</artifactId>
+         <version>0.9.0-SNAPSHOT</version>
+         <scope>test</scope>
       </dependency>
    </dependencies>
    <build>
