--- a/vyne/pom.xml
+++ b/vyne/pom.xml
@@ -23,6 +23,15 @@
          <artifactId>vyne-core-types</artifactId>
          <version>${project.version}</version>
       </dependency>
+      <!-- This might be a bad idea - it's just to access CsvImportParameters.
+      If this creates circular dependencies, or a mess, let's just refactor the
+      required classes elsewhere -->
+
+      <dependency>
+         <groupId>io.vyne</groupId>
+         <artifactId>cask-api</artifactId>
+         <version>${project.version}</version>
+      </dependency>
       <dependency>
          <groupId>io.vyne</groupId>
          <artifactId>vyne-taxi</artifactId>
