--- a/cask/pom.xml
+++ b/cask/pom.xml
@@ -139,6 +139,12 @@
             <scope>test</scope>
         </dependency>
        <dependency>
+          <groupId>io.zonky.test</groupId>
+          <artifactId>embedded-database-spring-test</artifactId>
+          <version>1.5.5</version>
+          <scope>test</scope>
+       </dependency>
+       <dependency>
           <groupId>org.skyscreamer</groupId>
           <artifactId>jsonassert</artifactId>
           <version>1.5.0</version>
