use distribute by default

--- a/pipelines/pipeline-runner-app/src/main/resources/application.yml
+++ b/pipelines/pipeline-runner-app/src/main/resources/application.yml
@@ -30,6 +30,6 @@ vyne:
       name: cask
    queryServiceUrl: http://${vyne.queryService.name}
    schema:
-        publicationmethod: REMOTE
+        publicationMethod: DISTRIBUTED
         pollInterval: 5s
         publishRetryInterval: 3s
