--- a/cask/src/main/resources/application.yml
+++ b/cask/src/main/resources/application.yml
@@ -50,6 +50,22 @@ feign:
 cask:
    maxTextMessageBufferSize: 67108864 # 1024 * 1024 * 64
    maxBinaryMessageBufferSize: 67108864 # 1024 * 1024 * 64
+   views:
+      -  typeName: ion.orders.OrderEvent
+         distinct: true
+         inherits:
+            - cacib.orders.OrderLifecycleEvent
+         join:
+            kind: LEFT_OUTER
+            left: ion.orders.Order
+            right: ion.trade.Trade
+            joinOn:
+               -  leftField: orderId
+                  rightField: orderId
+               -  leftField: lastTradeDate
+                  rightField: tradeCreationDate
+               -  leftField: lastTradeTime
+                  rightField: tradeCreationTime
    service:
       annotations: Datasource
 
