added simple test runner

--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,7 @@
       <module>cask-api</module>
       <module>vyne-ql</module>
       <module>vyne-taxi</module>
+      <module>test-cli</module>
    </modules>
 
    <scm>
