--- a/utils/pom.xml
+++ b/utils/pom.xml
@@ -16,6 +16,10 @@
          <groupId>com.google.guava</groupId>
          <artifactId>guava</artifactId>
       </dependency>
+      <dependency>
+         <groupId>io.projectreactor</groupId>
+         <artifactId>reactor-core</artifactId>
+      </dependency>
    </dependencies>
 
 </project>
