--- a/test-cli/pom.xml
+++ b/test-cli/pom.xml
@@ -66,30 +66,18 @@
    <build>
       <plugins>
          <plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>appassembler-maven-plugin</artifactId>
-            <version>1.10</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>
             <executions>
                <execution>
-                  <id>assemble-script</id>
-                  <phase>package</phase>
-                  <goals><goal>assemble</goal></goals>
+                  <goals>
+                     <goal>repackage</goal>
+                  </goals>
                   <configuration>
-                     <!--<assembleDirectory>${project.build.directory}/appassembler</assembleDirectory>-->
-<!--                     <assembleDirectory>${project.build.directory}/</assembleDirectory>-->
-<!--                     <binFileExtensions>-->
-<!--                        <unix>.sh</unix>-->
-<!--                     </binFileExtensions>-->
-<!--                     <platforms>-->
-<!--                        <platform>unix</platform>-->
-<!--                        <platform>windows</platform>-->
-<!--                     </platforms>-->
-                     <programs>
-                        <program>
-                           <mainClass>io.vyne.testcli.TestCliAppKt</mainClass>
-                           <id>vynetest</id>
-                        </program>
-                     </programs>
+                     <classifier>spring-boot</classifier>
+                     <mainClass>
+                        io.vyne.testcli.TestCliAppKt
+                     </mainClass>
                   </configuration>
                </execution>
             </executions>
