--- a/test-cli/pom.xml
+++ b/test-cli/pom.xml
@@ -61,6 +61,16 @@
          <groupId>org.springframework</groupId>
          <artifactId>spring-core</artifactId>
       </dependency>
+      <dependency>
+         <groupId>io.vyne</groupId>
+         <artifactId>cask-api</artifactId>
+         <version>${project.version}</version>
+      </dependency>
+      <dependency>
+         <groupId>io.vyne</groupId>
+         <artifactId>vyne</artifactId>
+         <version>${project.version}</version>
+      </dependency>
    </dependencies>
 
    <build>
@@ -89,19 +99,75 @@
                </generateGitPropertiesFilename>
             </configuration>
          </plugin>
+         <!--         <plugin>-->
+         <!--            <groupId>org.springframework.boot</groupId>-->
+         <!--            <artifactId>spring-boot-maven-plugin</artifactId>-->
+         <!--            <executions>-->
+         <!--               <execution>-->
+         <!--                  <goals>-->
+         <!--                     <goal>repackage</goal>-->
+         <!--                  </goals>-->
+         <!--                  <configuration>-->
+         <!--                     <classifier>spring-boot</classifier>-->
+         <!--                     <mainClass>-->
+         <!--                        io.vyne.testcli.TestCliAppKt-->
+         <!--                     </mainClass>-->
+         <!--                  </configuration>-->
+         <!--               </execution>-->
+         <!--            </executions>-->
+         <!--         </plugin>-->
          <plugin>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-maven-plugin</artifactId>
+            <artifactId>maven-assembly-plugin</artifactId>
+            <version>3.3.0</version>
+            <configuration>
+               <descriptorRefs>
+                  <descriptorRef>jar-with-dependencies</descriptorRef>
+               </descriptorRefs>
+               <archive>
+                  <manifest>
+                     <mainClass>io.vyne.testcli.TestCliAppKt</mainClass>
+                  </manifest>
+               </archive>
+            </configuration>
             <executions>
                <execution>
+                  <id>make-assembly</id> <!-- this is used for inheritance merges -->
+                  <phase>package</phase> <!-- bind to the packaging phase -->
                   <goals>
-                     <goal>repackage</goal>
+                     <goal>single</goal>
+                  </goals>
+               </execution>
+            </executions>
+         </plugin>
+         <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>appassembler-maven-plugin</artifactId>
+            <version>1.10</version>
+            <executions>
+               <execution>
+                  <id>assemble-script</id>
+                  <phase>package</phase>
+                  <goals>
+                     <goal>assemble</goal>
                   </goals>
                   <configuration>
-                     <classifier>spring-boot</classifier>
-                     <mainClass>
-                        io.vyne.testcli.TestCliAppKt
-                     </mainClass>
+                     <!--<assembleDirectory>${project.build.directory}/appassembler</assembleDirectory>-->
+                     <!--                     <assembleDirectory>${project.build.directory}/</assembleDirectory>-->
+                     <!--                     <binFileExtensions>-->
+                     <!--                        <unix>.sh</unix>-->
+                     <!--                     </binFileExtensions>-->
+                     <!--                     <platforms>-->
+                     <!--                        <platform>unix</platform>-->
+                     <!--                        <platform>windows</platform>-->
+                     <!--                     </platforms>-->
+                     <programs>
+                        <program>
+                           <mainClass>io.vyne.testcli.TestCliAppKt</mainClass>
+                           <id>vynetest</id>
+                        </program>
+                     </programs>
+                     <repositoryLayout>flat</repositoryLayout>
+                     <repositoryName>lib</repositoryName>
                   </configuration>
                </execution>
             </executions>
