--- a/vyne-query-service/pom.xml
+++ b/vyne-query-service/pom.xml
@@ -133,6 +133,16 @@
          <artifactId>spring-webflux</artifactId>
          <scope>test</scope>
       </dependency>
+      <dependency>
+         <groupId>net.lingala.zip4j</groupId>
+         <artifactId>zip4j</artifactId>
+         <version>2.6.3</version>
+      </dependency>
+      <dependency>
+         <groupId>io.vyne</groupId>
+         <artifactId>test-cli</artifactId>
+         <version>${project.version}</version>
+      </dependency>
    </dependencies>
 
    <build>
