--- a/file-schema-server/pom.xml
+++ b/file-schema-server/pom.xml
@@ -63,6 +63,12 @@
          <version>5.7.0.202003110725-r</version>
       </dependency>
       <dependency>
+         <groupId>commons-io</groupId>
+         <artifactId>commons-io</artifactId>
+         <version>2.8.0</version>
+      </dependency>
+
+      <dependency>
          <groupId>com.nhaarman.mockitokotlin2</groupId>
          <artifactId>mockito-kotlin</artifactId>
          <version>2.2.0</version>
