--- a/vyne-query-service/pom.xml
+++ b/vyne-query-service/pom.xml
@@ -55,6 +55,10 @@
          <artifactId>spring-boot-starter-web</artifactId>
       </dependency>
       <dependency>
+         <groupId>org.springframework.boot</groupId>
+         <artifactId>spring-boot-starter-websocket</artifactId>
+      </dependency>
+      <dependency>
          <groupId>org.springframework.cloud</groupId>
          <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
       </dependency>
