--- a/vyne-query-service/src/main/web/package.json
+++ b/vyne-query-service/src/main/web/package.json
@@ -34,6 +34,7 @@
     "@materia-ui/ngx-monaco-editor": "^2.0.7",
     "@ng-bootstrap/ng-bootstrap": "^5.3.0",
     "@ng-select/ng-select": "^3.7.3",
+    "@stomp/ng2-stompjs": "^7.2.0",
     "@swimlane/ngx-graph": "^5.5.0",
     "@types/angular": "^1.7.0",
     "ag-grid-angular": "^23.2.1",
