--- a/vyne-query-service/src/main/web/package.json
+++ b/vyne-query-service/src/main/web/package.json
@@ -39,6 +39,7 @@
     "@types/angular": "^1.7.0",
     "ag-grid-angular": "^23.2.1",
     "ag-grid-community": "^23.2.1",
+    "angular-split": "^4.0.0",
     "class-transformer": "^0.2.0",
     "core-js": "^3.1.3",
     "file-saver": "^2.0.2",
