--- a/cask-api/pom.xml
+++ b/cask-api/pom.xml
@@ -35,6 +35,10 @@
           <artifactId>spring-web</artifactId>
        </dependency>
        <dependency>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-webmvc</artifactId>
+       </dependency>
+       <dependency>
           <groupId>org.springframework.cloud</groupId>
           <artifactId>spring-cloud-openfeign-core</artifactId>
        </dependency>
