--- a/cask/pom.xml
+++ b/cask/pom.xml
@@ -13,6 +13,11 @@
 
     <dependencies>
        <dependency>
+          <groupId>io.vyne</groupId>
+          <artifactId>vyne-ql-compiler</artifactId>
+          <version>0.11.3-SNAPSHOT</version>
+       </dependency>
+       <dependency>
           <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>
