--- a/vyne-ql/vyne-ql-compiler/pom.xml
+++ b/vyne-ql/vyne-ql-compiler/pom.xml
@@ -94,6 +94,15 @@
                </execution>
             </executions>
          </plugin>
+         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+               <includes>
+                  <include>**/*Spek.*</include>
+               </includes>
+            </configuration>
+         </plugin>
       </plugins>
    </build>
    <repositories>
