DB Connection Usage Optimisation part I

--- a/cask/src/main/resources/application.yml
+++ b/cask/src/main/resources/application.yml
@@ -7,6 +7,8 @@ spring.datasource:
    username: "vynedb"
    password: "vynedb"
    driver: "org.postgresql.Driver"
+   hikari:
+     maximum-pool-size: 20
 
 spring:
    main:
