--- a/pom.xml
+++ b/pom.xml
@@ -181,7 +181,7 @@
          <dependency>
             <groupId>io.projectreactor</groupId>
             <artifactId>reactor-bom</artifactId>
-            <version>Dysprosium-SR6</version>
+            <version>2020.0.2</version>
             <type>pom</type>
             <scope>import</scope>
          </dependency>
