--- a/vyne-query-service/pom.xml
+++ b/vyne-query-service/pom.xml
@@ -67,6 +67,18 @@
          <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
       </dependency>
       <dependency>
+         <groupId>org.springframework.boot</groupId>
+         <artifactId>spring-boot-starter-security</artifactId>
+      </dependency>
+      <dependency>
+         <groupId>org.springframework.security</groupId>
+         <artifactId>spring-security-oauth2-resource-server</artifactId>
+      </dependency>
+      <dependency>
+         <groupId>org.springframework.security</groupId>
+         <artifactId>spring-security-oauth2-jose</artifactId>
+      </dependency>
+      <dependency>
          <groupId>lang.taxi</groupId>
          <artifactId>swagger2taxi</artifactId>
          <version>${taxi.version}</version>
