minor refactors to auth

--- a/jwt-auth-server/src/main/resources/application.yml
+++ b/jwt-auth-server/src/main/resources/application.yml
@@ -15,8 +15,10 @@ keycloak:
       realmImportFile: vyne-realm.json
       realmUsers:
          -
-            username: user1
+            username: marty
+            email: marty@vyne.co
             password: test
          -
-            username: user2
+            username: serhat
+            email: serhat@vyne.co
             password: test
