--- a/vyne-query-service/pom.xml
+++ b/vyne-query-service/pom.xml
@@ -16,6 +16,11 @@
    <dependencies>
       <dependency>
          <groupId>io.vyne</groupId>
+         <artifactId>vyne-security</artifactId>
+         <version>${project.version}</version>
+      </dependency>
+      <dependency>
+         <groupId>io.vyne</groupId>
          <artifactId>vyne-search</artifactId>
          <version>${project.version}</version>
       </dependency>
