Pipeline runner fix

--- a/pipelines/pipeline-runner-app/src/main/resources/application.yml
+++ b/pipelines/pipeline-runner-app/src/main/resources/application.yml
@@ -33,3 +33,11 @@ vyne:
         publicationMethod: DISTRIBUTED
         pollInterval: 5s
         publishRetryInterval: 3s
+   graph:
+      vyneGraphBuilderCache:
+         baseSchemaCacheSize: 100
+         graphWithFactTypesCacheSize: 100
+         baseSchemaGraphCacheSize: 100
+      vyneDiscoverGraphQuery:
+         schemaGraphCacheSize: 5
+         searchPathExclusionsCacheSize: 200000
