Vyne Test Containers

--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,7 @@
       <module>vyne-ql</module>
       <module>test-cli</module>
       <module>jwt-auth-server</module>
+       <module>test-containers</module>
    </modules>
 
    <scm>
