--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -89,6 +89,14 @@ build-publish-release:
       paths:
          - "test-cli/target/*.zip"
 
+build-publish-alpha:
+   resource_group: docker_release
+   stage: deploy
+   script:
+      - docker login -u vynecd -p $DOCKER_HUB_PASSWORD
+      - 'mvn $MAVEN_CLI_OPTS -DskipTests clean deploy -DbuildNumber=$CI_BUILD_ID -P alpha-release'
+   when: manual
+
 release-major:
    variables:
       GIT_STRATEGY: clone
