--- a/pipelines/pom.xml
+++ b/pipelines/pom.xml
@@ -24,14 +24,14 @@
       <module>pipelines-orchestrator</module>
    </modules>
 
-   <dependencyManagement>
-      <dependencies>
-         <dependency>
-            <groupId>org.eclipse.jetty.websocket</groupId>
-            <artifactId>websocket-server</artifactId>
-            <version>9.4.28.v20200408</version>
-         </dependency>
-      </dependencies>
-   </dependencyManagement>
+   <!--   <dependencyManagement>-->
+   <!--      <dependencies>-->
+   <!--         <dependency>-->
+   <!--            <groupId>org.eclipse.jetty.websocket</groupId>-->
+   <!--            <artifactId>websocket-server</artifactId>-->
+   <!--            <version>9.4.28.v20200408</version>-->
+   <!--         </dependency>-->
+   <!--      </dependencies>-->
+   <!--   </dependencyManagement>-->
 
 </project>
