--- a/cask/pom.xml
+++ b/cask/pom.xml
@@ -125,6 +125,10 @@
           <groupId>net.logstash.logback</groupId>
           <artifactId>logstash-logback-encoder</artifactId>
        </dependency>
+       <dependency>
+          <groupId>org.springframework.kafka</groupId>
+          <artifactId>spring-kafka</artifactId>
+       </dependency>
         <dependency>
             <groupId>io.projectreactor</groupId>
             <artifactId>reactor-test</artifactId>
@@ -156,6 +160,17 @@
           <scope>test</scope>
        </dependency>
     </dependencies>
+   <dependencyManagement>
+      <dependencies>
+      <dependency>
+         <groupId>io.projectreactor</groupId>
+         <artifactId>reactor-bom</artifactId>
+         <version>2020.0.3</version>
+         <type>pom</type>
+         <scope>import</scope>
+      </dependency>
+      </dependencies>
+   </dependencyManagement>
 
     <build>
         <finalName>${project.artifactId}</finalName>
