--- a/pipelines/pom.xml
+++ b/pipelines/pom.xml
@@ -24,14 +24,21 @@
       <module>pipelines-orchestrator</module>
    </modules>
 
-   <!--   <dependencyManagement>-->
-   <!--      <dependencies>-->
-   <!--         <dependency>-->
-   <!--            <groupId>org.eclipse.jetty.websocket</groupId>-->
-   <!--            <artifactId>websocket-server</artifactId>-->
-   <!--            <version>9.4.28.v20200408</version>-->
-   <!--         </dependency>-->
-   <!--      </dependencies>-->
-   <!--   </dependencyManagement>-->
+   <dependencyManagement>
+      <dependencies>
+         <dependency>
+            <groupId>io.projectreactor</groupId>
+            <artifactId>reactor-bom</artifactId>
+            <version>Dysprosium-SR6</version>
+            <type>pom</type>
+            <scope>import</scope>
+         </dependency>
+         <dependency>
+            <groupId>org.eclipse.jetty.websocket</groupId>
+            <artifactId>websocket-server</artifactId>
+            <version>9.4.28.v20200408</version>
+         </dependency>
+      </dependencies>
+   </dependencyManagement>
 
 </project>
