--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
    <groupId>io.vyne</groupId>
    <artifactId>platform</artifactId>
    <packaging>pom</packaging>
-   <version>0.13.8</version>
+   <version>0.13.8.1</version>
 
    <parent>
       <groupId>org.springframework.boot</groupId>
@@ -463,7 +463,7 @@
             <activeByDefault>false</activeByDefault>
          </activation>
          <properties>
-            <docker.tag.latest>latest</docker.tag.latest>
+            <docker.tag.latest>0.13.8.patch</docker.tag.latest>
          </properties>
       </profile>
    </profiles>
