--- a/vyne/pom.xml
+++ b/vyne/pom.xml
@@ -94,6 +94,17 @@
          <scope>test</scope>
       </dependency>
    </dependencies>
+   <dependencyManagement>
+      <dependencies>
+         <dependency>
+            <groupId>io.projectreactor</groupId>
+            <artifactId>reactor-bom</artifactId>
+            <version>Dysprosium-SR6</version>
+            <type>pom</type>
+            <scope>import</scope>
+         </dependency>
+      </dependencies>
+   </dependencyManagement>
    <build>
       <plugins>
          <!-- don't generate a source jar -->
