trying to refactor back to EMitterProcessor, not working :(

--- a/vyne-query-service/src/main/resources/application.yml
+++ b/vyne-query-service/src/main/resources/application.yml
@@ -59,6 +59,7 @@ logging:
       com.netflix: WARN
       com.hazelcast: WARN
       io.vyne: INFO
+      io.vyne.query: INFO
       org.apache.catalina: WARN
 eureka:
    client:
