--- a/pom.xml
+++ b/pom.xml
@@ -176,6 +176,12 @@
          <artifactId>h2</artifactId>
          <scope>test</scope>
       </dependency>
+      <dependency>
+         <groupId>io.github.microutils</groupId>
+         <artifactId>kotlin-logging-jvm</artifactId>
+         <version>2.0.4</version>
+      </dependency>
+
    </dependencies>
 
    <dependencyManagement>
