--- a/vyne-query-service/src/main/web/angular.json
+++ b/vyne-query-service/src/main/web/angular.json
@@ -23,9 +23,7 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.app.json",
             "assets": [
-              "src/favicon.ico",
-              "src/favicon-32x32.png",
-              "src/favicon-16x16.png",
+              "src/icon-48x48.png",
               "src/assets",
               {
                 "glob": "**/*",
