--- a/pipelines/pipeline-runner-app/pom.xml
+++ b/pipelines/pipeline-runner-app/pom.xml
@@ -29,6 +29,12 @@
          <artifactId>spring-cloud-starter-config</artifactId>
       </dependency>
 
+
+      <dependency>
+         <groupId>org.springframework.boot</groupId>
+         <artifactId>spring-boot-starter-actuator</artifactId>
+      </dependency>
+
       <dependency>
          <groupId>io.vyne</groupId>
          <artifactId>vyne</artifactId>
