--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -72,7 +72,7 @@ cask-only-docker:
       - docker login -u vynecd -p $DOCKER_HUB_PASSWORD
       - 'mvn $MAVEN_CLI_OPTS -DskipTests clean install'
       - cd cask
-      - 'mvn $MAVEN_CLI_OPTS -DskipTests -DdockerFilePath=DockerfileCaskOnly -DdockerImageName=vyneco/caskOnly -Ddocker.tag.latest=latest-manual -Ddocker.tag.numbered=$CI_BUILD_ID deploy'
+      - 'mvn $MAVEN_CLI_OPTS -DskipTests -DdockerFilePath=DockerfileCaskOnly -DdockerImageName=vyneco/caskOnly -Ddocker.tag.latest=latest-manual -Ddocker.tag.numbered=$CI_BUILD_ID docker:build docker:push'
    when: manual
 
 build-publish-snapshot:
