--- a/cask/src/main/resources/application.yml
+++ b/cask/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
    port: 8800
 
 spring.datasource:
-   url: "jdbc:postgresql://localhost:5432/vynedb-regression"
+   url: "jdbc:postgresql://localhost:5432/vynedb"
    username: "vynedb"
    password: "vynedb"
    driver: "org.postgresql.Driver"
