--- a/cask/src/main/resources/application-kafka.yml
+++ b/cask/src/main/resources/application-kafka.yml
@@ -8,7 +8,7 @@ spring:
 cask:
    kafka:
       enabled: true
-      topic: ingestion-test
+      topic: otc-swap-2
       consumer-count: 6
       type-name: Swap
       # json or xml
