--- a/utils/pom.xml
+++ b/utils/pom.xml
@@ -20,6 +20,10 @@
          <groupId>io.projectreactor</groupId>
          <artifactId>reactor-core</artifactId>
       </dependency>
+      <dependency>
+         <groupId>com.ximpleware</groupId>
+         <artifactId>vtd-xml</artifactId>
+      </dependency>
    </dependencies>
 
 </project>
