--- a/utils/pom.xml
+++ b/utils/pom.xml
@@ -20,6 +20,16 @@
          <groupId>io.projectreactor</groupId>
          <artifactId>reactor-core</artifactId>
       </dependency>
+      <dependency>
+         <groupId>io.micrometer</groupId>
+         <artifactId>micrometer-core</artifactId>
+         <scope>provided</scope>
+      </dependency>
+      <dependency>
+         <groupId>io.github.microutils</groupId>
+         <artifactId>kotlin-logging-jvm</artifactId>
+         <version>2.0.4</version>
+      </dependency>
    </dependencies>
 
 </project>
