--- a/vyne-core-types/pom.xml
+++ b/vyne-core-types/pom.xml
@@ -32,6 +32,11 @@
          <version>${project.version}</version>
       </dependency>
       <dependency>
+         <groupId>io.micrometer</groupId>
+         <artifactId>micrometer-core</artifactId>
+         <scope>provided</scope>
+      </dependency>
+      <dependency>
          <groupId>org.apache.commons</groupId>
          <artifactId>commons-csv</artifactId>
          <version>1.8</version>
