--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
    <parent>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-parent</artifactId>
-      <version>2.3.1.RELEASE</version>
+      <version>2.3.8.RELEASE</version>
    </parent>
 
 
@@ -22,12 +22,12 @@
       <elasticsearch.version>7.5.2</elasticsearch.version>
 
       <kotlin.compiler.jvmTarget>1.8</kotlin.compiler.jvmTarget>
-      <kotlin.version>1.3.50</kotlin.version>
-      <kotlin.coroutines.version>1.3.7</kotlin.coroutines.version>
+      <kotlin.version>1.3.72</kotlin.version>
+      <kotlin.coroutines.version>1.3.9</kotlin.coroutines.version>
       <java.version>1.8</java.version>
       <logback.version>1.1.10</logback.version>
-      <spring.cloud.version>Hoxton.SR5</spring.cloud.version>
-      <spring.cloud.netflix.version>2.2.3.RELEASE</spring.cloud.netflix.version>
+      <spring.cloud.version>Hoxton.SR10</spring.cloud.version>
+      <spring.cloud.netflix.version>2.2.7.RELEASE</spring.cloud.netflix.version>
       <arrow.version>0.10.4</arrow.version>
       <logstash.logback.version>6.4</logstash.logback.version>
       <swagger.springfox.version>2.9.2</swagger.springfox.version>
@@ -47,7 +47,7 @@
       <module>schema-store-client</module>
       <module>schema-store-api</module>
       <module>vyne-spring-schemaStore</module>
-      <module>vyne-query-service</module>
+      <!-- <module>vyne-query-service</module> -->
       <module>vyne-client</module>
       <module>vyne-query-api</module>
       <module>vyne-client-spring</module>
@@ -188,13 +188,7 @@
             <type>pom</type>
             <scope>import</scope>
          </dependency>
-         <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-netflix</artifactId>
-            <version>${spring.cloud.netflix.version}</version>
-            <type>pom</type>
-            <scope>import</scope>
-         </dependency>
+
          <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-dependencies</artifactId>
@@ -202,6 +196,18 @@
             <type>pom</type>
             <scope>import</scope>
          </dependency>
+
+         <!--
+         <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-netflix</artifactId>
+            <version>${spring.cloud.netflix.version}</version>
+            <type>pom</type>
+            <scope>import</scope>
+         </dependency>
+         -->
+
+         <!--
          <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-openfeign</artifactId>
@@ -209,6 +215,8 @@
             <type>pom</type>
             <scope>import</scope>
          </dependency>
+         -->
+
          <!-- https://mvnrepository.com/artifact/io.r2dbc/r2dbc-bom -->
          <dependency>
             <groupId>io.r2dbc</groupId>
