--- a/vyne-client-spring/pom.xml
+++ b/vyne-client-spring/pom.xml
@@ -25,6 +25,10 @@
          <artifactId>spring-cloud-commons</artifactId>
       </dependency>
       <dependency>
+         <groupId>org.springframework.boot</groupId>
+         <artifactId>spring-boot-starter-webflux</artifactId>
+      </dependency>
+      <dependency>
          <groupId>org.springframework.security</groupId>
          <artifactId>spring-security-core</artifactId>
          <scope>provided</scope>
