--- a/vyne-query-service/pom.xml
+++ b/vyne-query-service/pom.xml
@@ -52,10 +52,6 @@
       </dependency>
       <dependency>
          <groupId>org.springframework.boot</groupId>
-         <artifactId>spring-boot-starter-web</artifactId>
-      </dependency>
-      <dependency>
-         <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-starter-websocket</artifactId>
       </dependency>
       <dependency>
@@ -110,6 +106,10 @@
          <artifactId>spring-cloud-starter-config</artifactId>
       </dependency>
       <dependency>
+         <groupId>org.springframework.boot</groupId>
+         <artifactId>spring-boot-starter-webflux</artifactId>
+      </dependency>
+      <dependency>
          <groupId>org.springframework.data</groupId>
          <artifactId>spring-data-r2dbc</artifactId>
          <version>1.1.1.RELEASE</version>
@@ -142,11 +142,6 @@
          <groupId>org.skyscreamer</groupId>
          <artifactId>jsonassert</artifactId>
          <version>1.5.0</version>
-         <scope>test</scope>
-      </dependency>
-      <dependency>
-         <groupId>org.springframework</groupId>
-         <artifactId>spring-webflux</artifactId>
          <scope>test</scope>
       </dependency>
       <dependency>
