--- a/vyne-spring/pom.xml
+++ b/vyne-spring/pom.xml
@@ -49,7 +49,7 @@
       </dependency>
       <dependency>
          <groupId>org.springframework.cloud</groupId>
-         <artifactId>spring-cloud-starter-openfeign</artifactId>
+         <artifactId>spring-cloud-starter-loadbalancer</artifactId>
       </dependency>
       <dependency>
          <groupId>org.springframework.cloud</groupId>
@@ -88,5 +88,11 @@
          <artifactId>json-path</artifactId>
          <scope>test</scope>
       </dependency>
+
+      <dependency>
+         <groupId>org.springframework.boot</groupId>
+         <artifactId>spring-boot-starter-webflux</artifactId>
+      </dependency>
+
    </dependencies>
 </project>
