--- a/vyne-spring/pom.xml
+++ b/vyne-spring/pom.xml
@@ -27,6 +27,12 @@
       </dependency>
       <dependency>
          <groupId>io.vyne</groupId>
+         <artifactId>vyne</artifactId>
+         <version>${project.version}</version>
+         <type>test-jar</type>
+      </dependency>
+      <dependency>
+         <groupId>io.vyne</groupId>
          <artifactId>vyne-spring-schemaStore</artifactId>
          <version>${project.version}</version>
       </dependency>
