--- a/vyne/pom.xml
+++ b/vyne/pom.xml
@@ -93,6 +93,18 @@
          <version>${taxi.version}</version>
          <scope>test</scope>
       </dependency>
+      <dependency>
+         <groupId>org.jetbrains.kotlinx</groupId>
+         <artifactId>kotlinx-coroutines-core</artifactId>
+      </dependency>
+      <dependency>
+         <groupId>org.jetbrains.kotlinx</groupId>
+         <artifactId>kotlinx-coroutines-reactor</artifactId>
+      </dependency>
+      <dependency>
+         <groupId>org.jetbrains.kotlinx</groupId>
+         <artifactId>kotlinx-coroutines-reactive</artifactId>
+      </dependency>
    </dependencies>
    <build>
       <plugins>
