--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-icons": "^4.2.0"
+    "react-icons": "^4.2.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "opencollective-postinstall": "^2.0.3",
-    "prettier": "2.2.1"
+    "prettier": "2.2.1",
+    "tailwindcss": "^2.0.3",
+    "twin.macro": "^2.3.0"
   },
   "keywords": [
     "gatsby"
