--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@babel/plugin-transform-spread": "^7.12.1",
     "opencollective-postinstall": "^2.0.3",
     "prettier": "2.2.1",
     "tailwindcss": "^2.0.3",
