--- a/vyne-query-service/pom.xml
+++ b/vyne-query-service/pom.xml
@@ -149,6 +149,16 @@
          <artifactId>test-cli</artifactId>
          <version>${project.version}</version>
       </dependency>
+
+      <dependency>
+         <groupId>org.jetbrains.kotlinx</groupId>
+         <artifactId>kotlinx-coroutines-core</artifactId>
+      </dependency>
+      <dependency>
+         <groupId>org.jetbrains.kotlinx</groupId>
+         <artifactId>kotlinx-coroutines-reactor</artifactId>
+      </dependency>
+
    </dependencies>
 
    <build>
