--- a/cask/docker-compose.yml
+++ b/cask/docker-compose.yml
@@ -12,7 +12,7 @@ services:
          # persist data even if container shuts down
          - database-data:/cask/data/
          # creates extra databases defined in POSTGRES_EXTRA_DATABASES, the user is the same
-         - ./create-multiple-postgresql-databases.sh:/docker-entrypoint-initdb.d/create-multiple-postgresql-databases.sh
+         #- ./create-multiple-postgresql-databases.sh:/docker-entrypoint-initdb.d/create-multiple-postgresql-databases.sh
       ports:
          - "5432:5432"
 
