--- a/pom.xml
+++ b/pom.xml
@@ -22,8 +22,8 @@
       <elasticsearch.version>7.5.2</elasticsearch.version>
 
       <kotlin.compiler.jvmTarget>1.8</kotlin.compiler.jvmTarget>
-      <kotlin.version>1.3.72</kotlin.version>
-      <kotlin.coroutines.version>1.3.9</kotlin.coroutines.version>
+      <kotlin.version>1.4.30</kotlin.version>
+      <kotlin.coroutines.version>1.4.3</kotlin.coroutines.version>
       <java.version>1.8</java.version>
       <logback.version>1.1.10</logback.version>
       <spring.cloud.version>Hoxton.SR10</spring.cloud.version>
@@ -55,8 +55,8 @@
      <!--  <module>pipelines</module> -->
       <module>cask-api</module>
       <module>vyne-ql</module>
-      <module>test-cli</module>
-      <module>jwt-auth-server</module>
+      <!-- <module>test-cli</module> -->
+      <!-- <module>jwt-auth-server</module> -->
        <module>test-containers</module>
    </modules>
 
