--- a/cask-api/pom.xml
+++ b/cask-api/pom.xml
@@ -32,11 +32,7 @@
         </dependency>
        <dependency>
           <groupId>org.springframework</groupId>
-          <artifactId>spring-web</artifactId>
-       </dependency>
-       <dependency>
-          <groupId>org.springframework</groupId>
-          <artifactId>spring-webmvc</artifactId>
+          <artifactId>spring-webflux</artifactId>
        </dependency>
        <dependency>
           <groupId>org.springframework.cloud</groupId>
