--- a/config-server/pom.xml
+++ b/config-server/pom.xml
@@ -18,7 +18,7 @@
        </dependency>
        <dependency>
           <groupId>org.springframework.boot</groupId>
-          <artifactId>spring-boot-starter-web</artifactId>
+          <artifactId>spring-boot-starter-webflux</artifactId>
        </dependency>
        <dependency>
           <groupId>org.springframework.cloud</groupId>
