--- a/file-schema-server/pom.xml
+++ b/file-schema-server/pom.xml
@@ -29,7 +29,7 @@
       </dependency>
       <dependency>
          <groupId>org.springframework.boot</groupId>
-         <artifactId>spring-boot-starter-web</artifactId>
+         <artifactId>spring-boot-starter-webflux</artifactId>
       </dependency>
       <dependency>
          <groupId>org.springframework.cloud</groupId>
