--- a/pom.xml
+++ b/pom.xml
@@ -181,13 +181,15 @@
 
    <dependencyManagement>
       <dependencies>
+
          <dependency>
             <groupId>io.projectreactor</groupId>
             <artifactId>reactor-bom</artifactId>
-            <version>Dysprosium-SR6</version>
+            <version>2020.0.5</version>
             <type>pom</type>
             <scope>import</scope>
          </dependency>
+
 
          <dependency>
             <groupId>org.springframework.cloud</groupId>
