--- a/vyne-client/pom.xml
+++ b/vyne-client/pom.xml
@@ -26,7 +26,7 @@
       </dependency>
       <dependency>
          <groupId>org.springframework</groupId>
-         <artifactId>spring-web</artifactId>
+         <artifactId>spring-webflux</artifactId>
       </dependency>
       <dependency>
          <groupId>com.fasterxml.jackson.module</groupId>
