--- a/vyne-query-service/pom.xml
+++ b/vyne-query-service/pom.xml
@@ -110,6 +110,10 @@
          <artifactId>spring-boot-starter-webflux</artifactId>
       </dependency>
       <dependency>
+         <groupId>org.springframework.boot</groupId>
+         <artifactId>spring-boot-starter-web</artifactId>
+      </dependency>
+      <dependency>
          <groupId>org.springframework.data</groupId>
          <artifactId>spring-data-r2dbc</artifactId>
          <version>1.1.1.RELEASE</version>
@@ -158,7 +162,6 @@
          <groupId>org.jetbrains.kotlinx</groupId>
          <artifactId>kotlinx-coroutines-reactor</artifactId>
       </dependency>
-
    </dependencies>
 
    <build>
