--- a/vyne-query-service/src/main/resources/application.yml
+++ b/vyne-query-service/src/main/resources/application.yml
@@ -14,6 +14,8 @@ spring:
    mvc:
       async:
          request-timeout: 1800000
+   main:
+      web-application-type: reactive
 
 vyne:
    newSchemaSubmissionEnabled: true
