--- a/pom.xml
+++ b/pom.xml
@@ -199,25 +199,23 @@
             <scope>import</scope>
          </dependency>
 
-         <!--
          <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-netflix</artifactId>
-            <version>${spring.cloud.netflix.version}</version>
-            <type>pom</type>
-            <scope>import</scope>
+            <groupId>com.playtika.reactivefeign</groupId>
+            <artifactId>feign-reactor-webclient</artifactId>
+            <version>2.0.30</version>
          </dependency>
-         -->
 
-         <!--
          <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-openfeign</artifactId>
-            <version>2.0.1.RELEASE</version>
-            <type>pom</type>
-            <scope>import</scope>
+            <groupId>com.playtika.reactivefeign</groupId>
+            <artifactId>feign-reactor-cloud</artifactId>
+            <version>2.0.30</version>
          </dependency>
-         -->
+
+         <dependency>
+            <groupId>com.playtika.reactivefeign</groupId>
+            <artifactId>feign-reactor-spring-configuration</artifactId>
+            <version>2.0.30</version>
+         </dependency>
 
          <!-- https://mvnrepository.com/artifact/io.r2dbc/r2dbc-bom -->
          <dependency>
