--- a/pipelines/pipelines-api/pom.xml
+++ b/pipelines/pipelines-api/pom.xml
@@ -31,8 +31,17 @@
          <artifactId>spring-web</artifactId>
       </dependency>
       <dependency>
-         <groupId>org.springframework.cloud</groupId>
-         <artifactId>spring-cloud-openfeign-core</artifactId>
+         <groupId>com.playtika.reactivefeign</groupId>
+         <artifactId>feign-reactor-webclient</artifactId>
       </dependency>
+      <dependency>
+         <groupId>com.playtika.reactivefeign</groupId>
+         <artifactId>feign-reactor-cloud</artifactId>
+      </dependency>
+      <dependency>
+         <groupId>com.playtika.reactivefeign</groupId>
+         <artifactId>feign-reactor-spring-configuration</artifactId>
+      </dependency>
+
    </dependencies>
 </project>
