--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 
 
    <properties>
-      <taxi.version>0.13.0</taxi.version>
+      <taxi.version>0.13.1-SNAPSHOT</taxi.version>
 
       <!-- Used in QueryService -->
       <elasticsearch.version>7.5.2</elasticsearch.version>
@@ -183,7 +183,7 @@
          <dependency>
             <groupId>io.projectreactor</groupId>
             <artifactId>reactor-bom</artifactId>
-            <version>Dysprosium-SR6</version>
+            <version>2020.0.5</version>
             <type>pom</type>
             <scope>import</scope>
          </dependency>
