--- a/cask/src/main/resources/application.yml
+++ b/cask/src/main/resources/application.yml
@@ -51,6 +51,11 @@ feign:
             connectTimeout: 5000
             readTimeout: 5000
 
+hystrix:
+   command:
+      default:
+         execution.isolation.thread.timeoutInMilliseconds: 10000
+
 cask:
    maxTextMessageBufferSize: 67108864 # 1024 * 1024 * 64
    maxBinaryMessageBufferSize: 67108864 # 1024 * 1024 * 64
