--- a/vyne/pom.xml
+++ b/vyne/pom.xml
@@ -101,7 +101,11 @@
          <groupId>org.jetbrains.kotlinx</groupId>
          <artifactId>kotlinx-coroutines-reactor</artifactId>
       </dependency>
-
+      <dependency>
+         <groupId>org.jetbrains.kotlinx</groupId>
+         <artifactId>kotlinx-coroutines-test</artifactId>
+         <scope>test</scope>
+      </dependency>
    </dependencies>
    <build>
       <plugins>
