Query Metadata sharedflow

--- a/vyne-query-service/pom.xml
+++ b/vyne-query-service/pom.xml
@@ -158,6 +158,18 @@
          <groupId>org.jetbrains.kotlinx</groupId>
          <artifactId>kotlinx-coroutines-reactor</artifactId>
       </dependency>
+      <dependency>
+         <groupId>org.jetbrains.kotlinx</groupId>
+         <artifactId>kotlinx-coroutines-test</artifactId>
+         <scope>test</scope>
+      </dependency>
+
+      <dependency>
+         <groupId>app.cash.turbine</groupId>
+         <artifactId>turbine-jvm</artifactId>
+         <version>0.4.1</version>
+      </dependency>
+
    </dependencies>
 
    <build>
