--- a/pom.xml
+++ b/pom.xml
@@ -476,7 +476,7 @@
    </repositories>
 
    <profiles>
-      <profile>
+      <!--<profile>
          <id>snapshot-release</id>
          <activation>
             <activeByDefault>false</activeByDefault>
@@ -485,7 +485,7 @@
             <docker.tag.latest>latest-snapshot</docker.tag.latest>
             <docker.tag.numbered>${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.incrementalVersion}-BETA-${buildNumber}</docker.tag.numbered>
          </properties>
-      </profile>
+      </profile> -->
       <profile>
          <id>release</id>
          <activation>
@@ -495,7 +495,7 @@
             <docker.tag.latest>latest</docker.tag.latest>
          </properties>
       </profile>
-      <profile>
+     <!-- <profile>
          <id>alpha-release</id>
          <activation>
             <activeByDefault>false</activeByDefault>
@@ -504,6 +504,6 @@
             <docker.tag.latest>latest-alpha</docker.tag.latest>
             <docker.tag.numbered>${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.incrementalVersion}-ALPHA-${buildNumber}</docker.tag.numbered>
          </properties>
-      </profile>
+      </profile>-->
    </profiles>
 </project>
